crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__follow_up_no_question.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<interrupted>No feedback provided</interrupted>
