crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_read_basic.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<file
  path="/home/user/test.txt"
  display_lines="1-2"
  total_lines="2"
><![CDATA[1:Hello, world!
2:This is a test file.]]>
</file>
