crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_read_basic_special_chars.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<file
  path="/home/user/test.txt"
  display_lines="1-1"
  total_lines="1"
><![CDATA[1:struct Foo<T>{ name: T }]]>
</file>
